# h3_dart

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  README.md  ffigen.yaml  melos.yaml  prepare_pub.sh  prepare_tests.sh  pubspec.yaml  sync_h3_dart_version.dart  sync_h3lib.sh
.github/workflows/: c_checks.yml  pub.yml  publish.yml  pubspec_checks.yml  tags.yml  tests.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
c/h3lib/: CMakeLists.txt
example/: pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/test/: widget_test.dart
geojson2h3/: CHANGELOG.md  README.md  pubspec.yaml
geojson2h3/lib/: geojson2h3.dart
geojson2h3/lib/src/: geojson2h3.dart
geojson2h3/test/: geojson2h3_test.dart  geojson2h3_test.mocks.dart
h3_common/: CHANGELOG.md  README.md  pubspec.yaml
h3_common/example/: README.md
h3_common/lib/: h3_common.dart
h3_common/lib/src/: geojson2h3.dart  h3.dart
h3_common/test/: models_test.dart
h3_dart/: CHANGELOG.md  README.md  pubspec.yaml
h3_dart/example/: README.md
h3_dart/example/ffi/: pubspec.yaml
h3_dart/example/web/: pubspec.yaml
h3_dart/lib/: h3_dart.dart  h3_flutter.dart
h3_dart/test/: common.dart  geojson2h3_test.dart  h3_dart_vm_test.dart  h3_dart_web_test.dart  h3_test.dart  models_test.dart
h3_ffi/: CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
h3_ffi/example/: pubspec.yaml
h3_ffi/lib/: h3_ffi.dart  internal.dart
h3_ffi/test/: common.dart  h3_ffi_factory_test.dart  h3_test.dart
h3_flutter/: .gitignore  .metadata  .pubignore  CHANGELOG.md  README.md  pubspec.yaml
h3_flutter/android/: CMakeLists.txt  build.gradle
h3_flutter/android/src/h3lib/: CMakeLists.txt
h3_flutter/android/src/main/kotlin/com/example/h3_flutter/: H3FlutterPlugin.kt
h3_flutter/bindings/: CMakeLists.txt  h3lib
h3_flutter/darwin/: .gitignore  h3_flutter.podspec  include.c
h3_flutter/example/: .metadata  README.md  pubspec.yaml
h3_flutter/ios/Classes/h3lib/: CMakeLists.txt
h3_flutter/lib/: ffi_extension.dart  h3_flutter.dart  internal.dart
h3_flutter/linux/: CMakeLists.txt  h3_flutter_plugin.cc
h3_flutter/macos/Classes/h3lib/: CMakeLists.txt
h3_flutter/windows/: CMakeLists.txt  h3_flutter_plugin.cpp  h3_flutter_plugin.h  h3_flutter_plugin_c_api.cpp
h3_flutter/windows/include/h3_flutter/: h3_flutter_plugin_c_api.h
h3_test/: pubspec.yaml
h3_test/lib/: h3_test.dart
h3_web/: CHANGELOG.md  README.md  analysis_options.yaml  buildddd.yaml  package-lock.json  package.json  pubspec.yaml
h3_web/example/: pubspec.yaml
h3_web/lib/: h3_web.dart
h3_web/test/: common.dart  h3_js_injector.dart  h3_test.dart
h3_web/web/: h3_test.dart  index.html  main.dart
ios/: h3_flutter.podspec
ios/Classes/: H3FlutterPlugin.h  H3FlutterPlugin.m  H3FlutterPlugin.swift  SwiftH3FlutterPlugin.swift
lib/: h3_flutter.dart  internal.dart
lib/src/: geo_coord.dart  geojson2h3.dart  h3.dart
macos/: h3_flutter.podspec
macos/Classes/: H3FlutterPlugin.swift  h3lib
scripts/: build_h3.sh  build_h3_darwin.sh  common.dart  dependency_override.dart  get_package_version.dart  prepare_tests.sh  sync_h3_dart_version.dart  sync_h3lib.sh
scripts/common/: common.dart  helpers.dart  package.dart  regex.dart
test/: h3_flutter_test.dart  h3_test.dart  h3_tests.dart  models_test.dart  utils.dart
(+90 files in other folders)
